fixed problems where css layout would be distorted after zooming, added certain elements to team members page.

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@
     padding: 0;
     box-sizing: border-box;
     text-align: center;
-    
 }
 
 
@@ -19,7 +18,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 300px;
+    height: 18.75rem;
     background-image: url("media/4musketeers3.jpg");
     background-position: right 15%;
     background-size: cover;
@@ -36,6 +35,7 @@ header {
     font-size: 1.1rem;
     color: white;
     margin: auto;
+    margin-right: 1rem;
 }
 
 #nav-active {
@@ -150,7 +150,8 @@ p a {
 .linkca {
     position: relative;
     display: inline-block;
-    margin: 100px;
+    margin-right:2.5rem;
+    margin-left:2.5rem;
 
 }
 
@@ -161,8 +162,8 @@ p a {
 }
 
 iframe {
-    width: 600px;
-    height: 700px;
+    width: 30rem;
+    height: 50rem;
     border-radius: 10%;
     
 
@@ -175,12 +176,12 @@ iframe {
     margin-bottom: 1%;
 }
 #website_project {
-
+    padding:1rem;
 }
 
 
 #process {
-
+    padding:1rem;
 }
 
 #calogo img {
@@ -236,10 +237,30 @@ iframe {
     position: fixed;
     color:white;
     background-color: rgb(37, 4, 4);
-    width: 100vw;
-    height: 270vh;
+    width: 120rem;
+    height: 120rem;
     transition: opacity 0.7s;
-    padding-top: 700px;
     font-size: xx-large;
+    padding-top: 25rem;
 }
 /*Greeting message ends*/
+/*Team member container*/
+.members{
+    display: flex;
+    
+    justify-content: space-between;
+}
+.membercontainer{
+    display: inline-block;
+    border:2px solid red;
+    width:20rem;
+    height:40rem;
+    border-radius:5%;
+    margin-left: 3rem;
+}
+.membercontainer img{
+    display:inline;
+    border-radius: 50%;
+    position:relative
+}
+/*Team member container*/
